--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -10,7 +10,7 @@
     <title>Posts</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/posts.css">
-    <script src="./js/posts.js"></script>
+    <script defer src="./js/posts.js"></script>
 </head>
 
 <body>
